[gd_scene load_steps=13 format=3 uid="uid://b2e28vcmug0q4"]

[ext_resource type="Script" uid="uid://bwxl0mgx2fb4m" path="res://main_menu.gd" id="1_b07fi"]
[ext_resource type="Texture2D" uid="uid://tdi35fnvdrem" path="res://Backgroundcake.png" id="2_x2ps0"]
[ext_resource type="Texture2D" uid="uid://bdjfip0bx6ig3" path="res://CakeSprite.png" id="3_rlxw3"]
[ext_resource type="Texture2D" uid="uid://byd0er6hg2dq8" path="res://CakeSpriteHover.png" id="4_rlxw3"]
[ext_resource type="FontFile" uid="uid://ib64rxoffavf" path="res://Hello Larry.otf" id="5_5kukc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5kukc"]
texture = ExtResource("2_x2ps0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_siod4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b07fi"]
bg_color = Color(0.20152679, 0.20152655, 0.20152643, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6lt7"]
bg_color = Color(0.82606, 0.82606006, 0.82606, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_siod4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ovav"]
texture = ExtResource("3_rlxw3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qx8t1"]
texture = ExtResource("4_rlxw3")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b07fi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5kukc")

[node name="MainButton" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 310.0
offset_right = 453.0
offset_bottom = 609.0
theme_override_constants/separation = 25

[node name="START" type="Button" parent="MainButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_siod4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b07fi")
theme_override_styles/hover = SubResource("StyleBoxFlat_x6lt7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_siod4")
text = "Start Game"

[node name="SETTING" type="Button" parent="MainButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_siod4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b07fi")
theme_override_styles/hover = SubResource("StyleBoxFlat_x6lt7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_siod4")
text = "Settings"

[node name="QUIT" type="Button" parent="MainButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_siod4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b07fi")
theme_override_styles/hover = SubResource("StyleBoxFlat_x6lt7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_siod4")
text = "Quit Game"

[node name="CAKEIcon" type="Button" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 10.0
offset_right = 1194.0
offset_bottom = 665.0
theme_override_styles/normal = SubResource("StyleBoxTexture_8ovav")
theme_override_styles/hover = SubResource("StyleBoxTexture_qx8t1")

[node name="CAKE" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 465.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("5_5kukc")
theme_override_font_sizes/font_size = 150
text = "CAKE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MAKER" type="Label" parent="."]
layout_mode = 0
offset_left = -84.0
offset_top = 109.0
offset_right = 476.0
offset_bottom = 338.0
theme_override_fonts/font = ExtResource("5_5kukc")
theme_override_font_sizes/font_size = 80
text = "Maker"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Panel" parent="."]
layout_mode = 0
offset_left = 194.0
offset_top = 90.0
offset_right = 963.0
offset_bottom = 579.0

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.094000004
anchor_bottom = 0.067
offset_left = 12.0
offset_top = 15.0
offset_right = 201.05
offset_bottom = 126.019
theme_override_fonts/font = ExtResource("5_5kukc")
theme_override_font_sizes/font_size = 45
text = "Settings"
horizontal_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 673.0
offset_top = 17.0
offset_right = 740.0
offset_bottom = 59.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5kukc")
theme_override_font_sizes/font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_siod4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b07fi")
theme_override_styles/hover = SubResource("StyleBoxFlat_x6lt7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_siod4")
text = "<-"

[connection signal="pressed" from="MainButton/SETTING" to="." method="_on_setting_2_pressed"]
[connection signal="pressed" from="MainButton/QUIT" to="." method="_on_quit_3_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
